--- a/style.css
+++ b/style.css
@@ -11,3 +11,61 @@
  padding-top: 20px;
  padding-bottom: 20px;
 }
+
+.HeaderContainer{
+ display: flex;
+ justify-content: space-between;
+ margin: 0 36px;
+ max-width: 100%;
+ position: relative;
+}
+
+.HeaderNavHamburger{
+ display: block;
+ position: relative;
+ width: 30px;
+ height: 21px;
+ z-index: 100;
+}
+
+.HeaderNavHamburger__line:first-child{
+ top: 0;
+}
+
+.HeaderNavHamburger__line{
+ position: absolute;
+ display: block;
+ width: 100%;
+ height: 3px;
+ background-color: #333;
+ transform: translate(0,-50%);
+ border-radius: 10px;
+ transition: top .2s,transform .2s,opacity .3s;
+}
+
+.HeaderNavHamburger__line{
+ position: absolute;
+ top: 50%;
+ display: block;
+ width: 100%;
+ height: 3px;
+ background-color: #333;
+ transform: translate(0,-50%);
+ border-radius: 10px;
+ transition: top .2s,transform .2s,opacity .3s;
+}
+
+.HeaderNavHamburger__line:last-child{
+ top: 100%;
+}
+
+.HeaderNavHamburger__line{
+ position: absolute;
+ display: block;
+ width: 100%;
+ height: 3px;
+ background-color: #333;
+ transform: translate(0,-50%);
+ border-radius: 10px;
+ transition: top .2s,transform .2s,opacity .3s;
+}
