--- a/style.css
+++ b/style.css
@@ -1,10 +1,18 @@
-.Header {
- width: 100%;
+body {
+ color: #333;
+ font-family: "游ゴシック",YuGothic,"ヒラギノ角ゴ Pro W3","Hiragino Kaku Gothic Pro","メイリオ",Meiryo,"ＭＳ Ｐゴシック","MS PGothic",sans-serif;
+ font-size: 14px;
+ font-weight: 500;
+}
+
+body {
+ margin: 0;
+ padding: 0;
 }
 
 .Header {
- background-color: #fff;
- z-index: 10;
+ width: 100%;
+ position: absolute;
 }
 
 .Header {
@@ -12,12 +20,73 @@
  padding-bottom: 20px;
 }
 
-.HeaderContainer{
+@media screen and (max-width: 767px){
+.Header {
+ padding-top: 15px;
+ padding-bottom: 15px;
+}
+}
+
+@media screen and (max-width: 1080px){
+.Header {
+ background-color: #fff;
+ z-index: 10;
+}
+}
+
+@media screen and (max-width: 1080px){
+.Header--common {
+ position: fixed !important;
+}
+}
+
+.HeaderContainer {
  display: flex;
  justify-content: space-between;
  margin: 0 36px;
  max-width: 100%;
  position: relative;
+}
+
+@media screen and (max-width: 767px){
+.HeaderContainer {
+ max-width: 100%;
+ margin: 0 20px;
+}
+}
+
+a {
+ color: #333;
+ text-decoration: none;
+}
+
+.HeaderLogo__image--pc {
+ display: block;
+ height: 20px;
+ width: auto;
+}
+
+@media screen and (max-width: 767px){
+.HeaderLogo__image--pc {
+ display: none;
+}
+}
+
+.HeaderLogo__image--sp {
+ display: none;
+ height: 16px;
+ width: auto;
+}
+
+@media screen and (max-width: 767px){
+.HeaderLogo__image--sp {
+ display: block;
+}
+}
+
+img {
+ border: 0;
+ vertical-align: middle;
 }
 
 .HeaderNavHamburger{
@@ -28,10 +97,28 @@
  z-index: 100;
 }
 
+.HeaderNavHamburger {
+ display: none;
+}
+
+@media screen and (max-width: 1080px){
+.HeaderNavHamburger {
+ cursor: pointer;
+ display: block;
+ position: relative;
+ width: 30px;
+ height: 21px;
+ z-index: 100;
+}
+}
+
+@media screen and (max-width: 1080px){
 .HeaderNavHamburger__line:first-child{
  top: 0;
 }
+}
 
+@media screen and (max-width: 1080px){
 .HeaderNavHamburger__line{
  position: absolute;
  display: block;
@@ -42,7 +129,9 @@
  border-radius: 10px;
  transition: top .2s,transform .2s,opacity .3s;
 }
+}
 
+@media screen and (max-width: 1080px){
 .HeaderNavHamburger__line{
  position: absolute;
  top: 50%;
@@ -54,11 +143,15 @@
  border-radius: 10px;
  transition: top .2s,transform .2s,opacity .3s;
 }
+}
 
+@media screen and (max-width: 1080px){
 .HeaderNavHamburger__line:last-child{
  top: 100%;
 }
+}
 
+@media screen and (max-width: 1080px){
 .HeaderNavHamburger__line{
  position: absolute;
  display: block;
@@ -69,11 +162,415 @@
  border-radius: 10px;
  transition: top .2s,transform .2s,opacity .3s;
 }
+}
 
-.FirstView{
- background-image: url(https://camp.potepan.com/wp-content/themes/potepancamp/assets/images/home/first-view/top-hero-sp.jpg.webp);
+.HeaderNavList {
+ align-items: center;
+ display: flex;
+ justify-content: space-between;
+}
+
+@media screen and (max-width: 767px){
+.HeaderNavList {
+ top: 52px;
+}
+}
+
+@media screen and (max-width: 1080px){
+.HeaderNavList {
+ overflow-y: scroll;
+ position: fixed;
+ top: 60px;
+ left: 100%;
+ width: 100%;
+ display: block;
+ padding-top: 20px;
+ padding-bottom: 75px;
+ transition: transform .5s;
+ z-index: 99;
+ background-color: rgba(0,0,0,.8);
+ -webkit-overflow-scrolling: touch;
+ height: 100%;
+}
+}
+
+ul, ol {
+ list-style: none;
+}
+
+
+.HeaderNavListItem {
+ margin-right: 45px;
+}
+
+@media screen and (max-width: 1080px){
+.HeaderNavListItem {
+ margin-right: 0;
+}
+}
+
+.HeaderNavListItem__link>span:first-child {
+ font-family: 'Lato',sans-serif;
+}
+
+.HeaderNavListItem__link>span {
+ display: block;
+ font-weight: 700;
+ text-align: center;
+}
+
+.HeaderNavListItem__button:visited {
+ color: #fff;
+}
+
+.HeaderNavListItem__button {
+    align-items: center;
+    background-color: #f79214;
+    border: none;
+    border-radius: 38px;
+    color: #fff;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    font-weight: 700;
+    justify-content: center;
+    text-decoration: none;
+    text-align: center;
+    width: 100%;
+    font-size: 12px;
+    height: 40px;
+    padding: 0 20px;
+}
+
+.FirstView {
+ background-image: url(//camp.potepan.com/wp-content/themes/potepancamp/assets/styles/../images/home/first-view/top-hero.jpg);
  background-size: cover;
  background-position: center;
  padding-top: 100px;
  padding-bottom: 28px;
+}
+
+@media screen and (max-width: 767px){
+.FirstView {
+ background-image: none;
+ padding-top: 0;
+ padding-bottom: 35px;
+}
+}
+
+.FirstView__main-image--sp{
+ display: none;
+}
+
+@media screen and (max-width: 767px){
+.FirstView__main-image--sp {
+ display: block;
+}
+}
+
+.FirstView__main-image{
+width: 100%;
+}
+
+img{
+ border: 0;
+ vertical-align: middle;
+}
+
+
+.FirstView__container{
+ max-width: 1140px;
+ padding-left: 50px;
+ padding-right: 50px;
+ margin-left: auto;
+ margin-right: auto;
+ position: relative;
+}
+
+@media screen and (max-width: 767px){
+.FirstView__container {
+ margin-top: -45vw;
+}
+}
+
+@media screen and (max-width: 767px){
+.FirstView__container {
+ max-width: none;
+ padding-left: 20px;
+ padding-right: 20px;
+}
+}
+
+.FirstViewContent{
+ margin-bottom: 70px;
+ width: fit-content;
+}
+
+@media screen and (max-width: 767px){
+.FirstViewContent {
+ margin-bottom: 20px;
+ width: 100%;
+}
+}
+
+
+.FirstViewContent__title{
+ color: #333;
+ font-family: 'Lato',sans-serif;
+ font-size: 38px;
+ font-weight: 700;
+ line-height: 54px;
+ margin-bottom: 15px;
+ text-align: center;
+}
+
+@media screen and (max-width: 767px){
+.FirstViewContent__title {
+ font-size: 25px;
+ line-height: 36px;
+ margin-left: calc(((100vw - 100%)/2)*-1);
+ margin-right: calc(((100vw - 100%)/2)*-1);
+}
+}
+
+.FirstViewContent__images{
+ margin-bottom: 25px;
+}
+
+@media screen and (max-width: 767px){
+.FirstViewContent__images {
+ display: flex;
+ justify-content: space-between;
+ margin-bottom: 30px;
+ width: 100%;
+}
+}
+
+.FirstViewContent__images img{
+ margin-right: 8px;
+}
+
+@media screen and (max-width: 767px){
+.FirstViewContent__images img {
+ width: 27.5%;
+}
+}
+
+.FirstViewContent__images img:nth-of-type(2){
+ width: 40%;
+}
+
+.FirstViewContent__images img:last-of-type{
+ margin-right: 0;
+}
+
+.FirstViewContent__buttons{
+ display: flex;
+}
+
+@media screen and (max-width: 767px){
+.FirstViewContent__buttons {
+ flex-direction: column;
+}
+}
+
+.FirstViewContent__buttons a:first-of-type{
+ margin-right: 15px;
+ width: 306px;
+}
+
+@media screen and (max-width: 767px){
+.FirstViewContent__buttons a:first-of-type {
+ margin-right: 0;
+}
+}
+
+.FirstViewContent__buttons a{
+ align-items: center;
+ background-color: #f79214;
+ border: none;
+ border-radius: 38px;
+ cursor: pointer;
+ display: flex;
+ flex-direction: column;
+ font-size: 16px;
+ font-weight: 700;
+ height: 64px;
+ justify-content: center;
+ text-decoration: none;
+ text-align: center;
+}
+
+@media screen and (max-width: 767px){
+.FirstViewContent__buttons a {
+ width: 100% !important;
+}
+}
+
+.FirstViewContent__buttons a:last-of-type{
+ background-color: #fff;
+ border: 1px solid #e0e0e0;
+ color: #333;
+ width: 176px;
+}
+
+@media screen and (max-width: 767px){
+.FirstViewContent__buttons a:last-of-type {
+ display: none;
+}
+}
+
+.FirstViewCaption{
+ color: #a2a2a4;
+ font-size: 12px;
+}
+
+.FirstViewCaption a {
+ color: #a2a2a4;
+}
+
+.AboutWrapper{
+ background-color: #f79214;
+ padding: 44px 0;
+}
+
+@media screen and (max-width: 767px){
+.AboutWrapper {
+ padding: 30px 0;
+}
+}
+
+.About {
+ max-width: 1140px;
+ padding-left: 50px;
+ padding-right: 50px;
+ margin-left: auto;
+ margin-right: auto;
+ position: relative;
+ align-items: center;
+ display: flex;
+ justify-content: space-between;
+}
+
+@media screen and (max-width: 1024px){
+.About {
+ flex-direction: column;
+}
+}
+
+@media screen and (max-width: 767px){
+.About {
+ max-width: none;
+ padding-left: 20px;
+ padding-right: 20px;
+}
+}
+
+.About__video {
+ width: 50%;
+}
+
+@media screen and (max-width: 767px){
+.About__video {
+ width: 100%;
+}
+}
+
+@media screen and (max-width: 1024px){
+.About__video {
+ margin-bottom: 16px;
+ width: 75%;
+}
+}
+
+.About__title {
+ display: flex;
+ flex-direction: column;
+ width: 100%;
+ align-items: flex-start;
+ margin-bottom: 0;
+ margin-left: 32px;
+}
+
+@media screen and (max-width: 767px){
+.About__title {
+ margin-bottom: 0;
+ width: 100%;
+}
+}
+
+@media screen and (max-width: 1024px){
+.About__title {
+ margin-left: 0;
+ width: 75%;
+}
+}
+
+.About__title h2 {
+ font-family: "游ゴシック",YuGothic,"ヒラギノ角ゴ Pro W3","Hiragino Kaku Gothic Pro","メイリオ",Meiryo,"ＭＳ Ｐゴシック","MS PGothic",sans-serif;
+ font-size: 38px;
+ font-weight: 900;
+ letter-spacing: .1em;
+ line-height: 54px;
+ width: 100%;
+}
+
+.About__title h2, .About__title p {
+ color: #fff;
+ text-align: left;
+}
+
+.About__title h2 {
+ margin-bottom: 10px;
+}
+
+.About__title h2>span {
+ font-family: 'Lato',sans-serif;
+ font-size: 38px;
+}
+
+.About__title h2 span {
+ font-weight: 900;
+}
+
+@media screen and (max-width: 767px){
+.About__title h2 span {
+ letter-spacing: 1px;
+}
+}
+
+.About__title br {
+ display: none;
+}
+
+.About__title p {
+ font-size: 16px;
+ font-weight: 700;
+ line-height: 26px;
+ margin-bottom: 16px;
+}
+
+.About__title p {
+ display: inline-block;
+}
+
+.About__button {
+ color: #fff;
+ display: flex;
+ font-size: 18px;
+ font-weight: 700;
+ line-height: 26px;
+}
+
+a {
+ text-decoration: none;
+}
+
+.About__button>img {
+ margin-right: 5px;
+}
+
+img {
+ border: 0;
+ vertical-align: middle;
 }
